# aoc-2023

./: Cargo.toml  justfile
daily-template/: Cargo.toml
day-01/: Cargo.toml
day-01/src/: part1.rs  part2.rs
day-02/: Cargo.toml
day-02/src/: card.rs  color.rs  custom_error.rs  game.rs  lib.rs  part1.rs  part2.rs  score.rs  set.rs
day-03/: Cargo.toml
day-03/src/: custom_error.rs  lib.rs  number.rs  part1.rs  part2.rs  tests.rs
day-04/: Cargo.toml
day-04/src/: card.rs  custom_error.rs  lib.rs  part1.rs  part2.rs
day-05/: Cargo.toml
day-05/src/: part1.rs  part2.rs
day-06/: Cargo.toml
day-06/src/: custom_error.rs  part1.rs  part2.rs
day-07/: Cargo.toml
day-07/src/: lib.rs  part1.rs  part2.rs
day-08/: Cargo.toml
day-08/src/: custom_error.rs  part1.rs  part2.rs
day-09/: Cargo.toml
day-09/src/: lib.rs  part1.rs  part2.rs  shared.rs
day-10/: Cargo.toml
day-10/src/: part1.rs  part2.rs
day-11/: Cargo.toml
day-11/src/: part1.rs  part2.rs  shared.rs
day-12/: Cargo.toml
day-12/src/: part1.rs  part2.rs
day-13/: Cargo.toml
day-13/src/: part1.rs  part2.rs  shared.rs
day-14/: Cargo.toml
day-14/src/: part1.rs  part2.rs
day-15/: Cargo.toml
day-15/src/: part1.rs  part2.rs
day-16/: Cargo.toml
day-16/src/: custom_error.rs  part1.rs  part2.rs
day-17/: Cargo.toml
day-17/src/: lib.rs  part1.rs  part2.rs
day-18/: Cargo.toml
day-18/src/: part1.rs  part2.rs
day-19/: Cargo.toml
day-20/: Cargo.toml
day-21/: Cargo.toml
day-22/: Cargo.toml
day-23/: Cargo.toml
day-24/: Cargo.toml
day-25/: Cargo.toml
