[workspace]
resolver = "2"

members = ["day-*", "daily-template"]
default-members = ["day-*"]

[workspace.dependencies]
glam = "0.27.0"
itertools = "0.13.0"
nom = "7.1.3"
petgraph = "0.6.4"
rayon = "1.10.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rstest = "0.20.0"
rstest_reuse = "0.7.0"
divan = "0.1.14"
tracing-tracy = "0.11.0"
tracy-client = "0.17.0"
tracy-client-sys = "0.22.2"
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.59"
dhat = "0.3.3"
criterion = { version = "0.5.1", features = ["html_reports"] }
nom_locate = { version = "4.2.0" }
derive_more = "0.99.17"
regex = "1.10.4"
proptest = "1.4.0"

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
